--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "robofriend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://arudolph10.github.io/robofriends"
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-scripts": "^4.0.0",
     "tachyons": "^4.11.1"
   },
